# MlOps_DEEP_CNN_CLASSIFIER

./: .gitignore  LICENSE  README.md  dvc.yaml  requirements_dev.txt  setup.cfg  setup.py  template.py
configs/: config.yaml
prediction_service/: Dockerfile  app.py  example_for_streamlit.py  requirements.txt
research/: st.02.ipynb  st_01.ipynb  st_03.ipynb  st_04.ipynb  st_05_trails.ipynb  trials.ipynb
research/mlflow_dir/: argv_ex.py  example.py
src/deepClassifier/components/: __init__.py  evaluation.py  prepare_base_model.py  prepare_callback.py  training.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/entity/: __init__.py  config_entity.py
src/deepClassifier/pipeline/: st_02_prepare_base_model.py
src/deepClassifier/utils/: __init__.py
