# meta data of the project

[metadata]
licence = MIT
licence_file = LICENCE
classifier = 
    progamming_Language :: Python :: 3.7
    progamming_Language :: Python :: 3.8
    Operating_System :: OS Independent

[options]
install_requrements=
    ensure==1.0.2
python_requires = >=3.7

[options.extras_require]
testing=
    pytest>=7.1.3   # find out run unitest and intigration test
    mypy>=0.971     # helps is there is typing erros
    flake8>=5.0.4   # identify some mistakes(extra spaces like)
    tox>=3.25.1     # helps to create different envirement
    black>=22.8.0   # for formatting 

[options.package_data]
deepClassifier = py.typed  # helps to ignore testing erros like installing packages as tensorflow
  
[flake8]    # a library to helps to find out is any extra issue or if not followning standers 
max-line-length = 160   # in this project, a code line's length must be less than this
exclude = __init__.py   